# spotify-skip-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  get_dependencies.sh  pyproject.toml
baseline_model/: baseline.py  baseline_model_parameters.csv
core/: final_validation.py  gym.py  models.py
data/: labels_test.csv  labels_train.csv  labels_valid.csv
datahandler/: data_handler.py  data_to_autoencoder.py
flattened_code/: autoencoder_data_loaders.py  autoencoder_looper.sh  autoencoder_training.py  autoencoder_tuning.py  baseline_tuning.py  compress_dataset.py  datalib.py  direct_rnn_data_loader.py  final_validation.py  gym.py  models.py  rnn_data_loader.py  rnn_training.py  rnn_tuning.py
flattened_code/logs/tensorboard/RNN_test/20210802-010236/: events.out.tfevents.1627880556.XPS-15.12324.0
flattened_code/logs/tensorboard/RNN_test/20210802-012916/: events.out.tfevents.1627882191.XPS-15.11800.1
flattened_code/logs/tensorboard/RNN_test/20210802-012952/: events.out.tfevents.1627882192.XPS-15.11800.2  events.out.tfevents.1627882206.XPS-15.11800.3
flattened_code/logs/tensorboard/RNN_test/20210802-013006/: events.out.tfevents.1627882206.XPS-15.11800.4  events.out.tfevents.1627882212.XPS-15.11800.5
flattened_code/logs/tensorboard/RNN_test/20210802-013012/: events.out.tfevents.1627882212.XPS-15.11800.6  events.out.tfevents.1627882928.XPS-15.11800.7
flattened_code/logs/tensorboard/RNN_test/20210802-013016/: events.out.tfevents.1627882216.XPS-15.13104.0
flattened_code/logs/tensorboard/RNN_test/20210802-014209/: events.out.tfevents.1627882929.XPS-15.11800.8
flattened_code/logs/tensorboard/RNN_test/20210802-014605/: events.out.tfevents.1627883165.XPS-15.11800.10
flattened_code/logs/tensorboard/RNN_test/20210802-014643/: events.out.tfevents.1627883203.XPS-15.11800.14  events.out.tfevents.1627883228.XPS-15.11800.15
flattened_code/logs/tensorboard/RNN_test/20210802-014709/: events.out.tfevents.1627883229.XPS-15.11800.16  events.out.tfevents.1627883231.XPS-15.11800.17
flattened_code/logs/tensorboard/RNN_test/20210802-014711/: events.out.tfevents.1627883231.XPS-15.11800.18  events.out.tfevents.1627883244.XPS-15.11800.19
flattened_code/logs/tensorboard/RNN_test/20210802-014811/: events.out.tfevents.1627883291.XPS-15.11800.24  events.out.tfevents.1627883295.XPS-15.11800.25
flattened_code/logs/tensorboard/RNN_test/20210802-014841/: events.out.tfevents.1627883321.XPS-15.11800.30  events.out.tfevents.1627883325.XPS-15.11800.31
flattened_code/logs/tensorboard/RNN_test/20210802-014846/: events.out.tfevents.1627883326.XPS-15.11800.32  events.out.tfevents.1627883335.XPS-15.11800.33
flattened_code/logs/tensorboard/RNN_test/20210802-014856/: events.out.tfevents.1627883336.XPS-15.11800.34  events.out.tfevents.1627883383.XPS-15.11800.35
flattened_code/logs/tensorboard/RNN_test/20210802-014944/: events.out.tfevents.1627883384.XPS-15.11800.36
flattened_code/logs/tensorboard/RNN_test/20210802-015007/: events.out.tfevents.1627883407.XPS-15.11800.40  events.out.tfevents.1627883444.XPS-15.11800.41
flattened_code/logs/tensorboard/RNN_test/20210802-015044/: events.out.tfevents.1627883444.XPS-15.11800.42  events.out.tfevents.1627883452.XPS-15.11800.43
flattened_code/logs/tensorboard/RNN_test/20210802-015053/: events.out.tfevents.1627883453.XPS-15.11800.44
flattened_code/logs/tensorboard/RNN_test/20210802-015059/: events.out.tfevents.1627883459.XPS-15.11800.46  events.out.tfevents.1627883465.XPS-15.11800.47
flattened_code/logs/tensorboard/RNN_test/20210802-015106/: events.out.tfevents.1627883466.XPS-15.11800.48
flattened_code/logs/tensorboard/RNN_test/20210802-015202/: events.out.tfevents.1627883530.XPS-15.11800.53
flattened_code/logs/tensorboard/RNN_test/20210802-015225/: events.out.tfevents.1627883592.XPS-15.11800.57
flattened_code/logs/tensorboard/RNN_test/20210802-015332/: events.out.tfevents.1627883696.XPS-15.11800.61
flattened_code/logs/tensorboard/RNN_test/20210802-015457/: events.out.tfevents.1627883771.XPS-15.11800.63
flattened_code/logs/tensorboard/RNN_test/20210802-015612/: events.out.tfevents.1627883772.XPS-15.11800.64  events.out.tfevents.1627883776.XPS-15.11800.65
flattened_code/logs/tensorboard/RNN_test/20210802-015711/: events.out.tfevents.1627883831.XPS-15.11800.68  events.out.tfevents.1627883858.XPS-15.11800.69
flattened_code/models/: autoencoder_spotify.pt  autoencoder_spotify_final.pt  rnn_spotify.pt
libs/: datalib.py  plotlib.py
models/: autoencoder_spotify.pt
scripts/: autoencoder_training.py  autoencoder_tuning.py  compress_dataset.py  final_validation.py  rnn_training.py  rnn_tuning.py
spotify_skip_prediction/baseline_model/: baseline.py  baseline_model_parameters.csv  test_baseline.ipynb
spotify_skip_prediction/core/: gym.py  models.py
spotify_skip_prediction/datahandler/: autoencoder_data_loaders.py  data_handler.py  data_loaders.py  rnn_data_loader.py
tests/: test.py  test_gym.py  test_models.py
tests/tests_core/: test_gym.py  test_models.py
tests/tests_datahandler/: test_data_handler.py  test_data_loaders.py
(+430 files in other folders)
