[tool.poetry]
name = "spotify-skip-prediction"
version = "0.1.0"
description = ""
authors = ["DM1122 <34867698+DM1122@users.noreply.github.com>"]

[tool.poetry.dependencies]
plotly = "^4.14.3"
python = "^3.7"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
docformatter = "^1.4"
isort = "^5.8.0"
pre-commit = "^2.13.0"
pylint = "^2.8.3"
pytest = "^5.2"
pylint-runner = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--html=logs/pytest-report.html --self-contained-html" 
testpaths = ["tests"]
markers = [
    "slow: tests that are slow to run (deselect with '-m \"not slow\"').",
    "plot: tests that produce plots."
]

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib="stdlib"
import_heading_thirdparty="external"
import_heading_firstparty="project"

[tool.black]
line-length = 88

[tool.pylint.messages_control]
max-line-length = 88
disable = []



