[tool.poetry]
name = "spotify-skip-prediction"
version = "0.1.0"
description = ""
authors = ["DM1122 <34867698+DM1122@users.noreply.github.com>"]

[tool.poetry.dependencies]
plotly = "^4.14.3"
python = "^3.7.1"
torch = "^1.8.1"
torchinfo = "^1.4.4"
pandas = "^1.2.4"
torchvision = "^0.10.0"
alive-progress = "^1.6.2"
tensorboard = "^2.5.0"
scikit-learn = "^0.24.2"
scikit-optimize = "^0.8.1"
matplotlib = "^3.4.2"
pmdarima = "^1.8.2"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
pre-commit = "^2.13.0"
pylint = "^2.8.3"
pytest = "^6.0"
pylint-runner = "^0.6.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib="stdlib"
import_heading_thirdparty="external"
import_heading_firstparty="project"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "--html=logs/pytest-report.html --self-contained-html" 
testpaths = ["tests"]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true
markers = [
    "slow: tests that are slow to run (deselect with '-m \"not slow\"').",
    "plot: tests that produce plots.",
    "star: starred tests."
]

[tool.pylint.messages_control]
max-line-length = 88
disable = ["invalid-name","too-many-arguments", "too-many-locals", "arguments-differ", "unnecessary-lambda", "too-many-instance-attributes", "protected-access", "duplicate-code", "too-few-public-methods", "logging-fstring-interpolation", "not-callable", "too-many-statements"]
generated-members=["numpy.*","torch.*"] # https://github.com/pytorch/pytorch/issues/701



